tests/baselines/reference/constraintSatisfactionWithAny2.errors.txt
==== tests/cases/compiler/constraintSatisfactionWithAny2.ts (1 errors) ====
    // errors expected for type parameter cannot be referenced in the constraints of the same list
    // any is not a valid type argument unless there is no constraint, or the constraint is any
    
    declare function foo<Z, T extends <U>(x: U) => Z>(y: T): Z;
                            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! constraintSatisfactionWithAny2.ts(4,25): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    var a: any;
    
    foo(a);
    foo<any, any>(a);